--- a/interface/src/views/Signup/Signup.css
+++ b/interface/src/views/Signup/Signup.css
@@ -15,7 +15,7 @@
 	color: black;
 }
 .signup-left-div {
-	width: 35%;
+	width: 40%;
 	background-color: #151515;
 	display: flex;
 	justify-content: center;
@@ -127,8 +127,8 @@
 	color: #ff5714;
 }
 .sending {
-	--color: orange;
-	font-size: 50px;
+	--indicator-color: orange;
+	font-size: 60px;
 }
 @media only screen and (max-width: 1020px) {
 	.signup-container {
