Forgot password utility added

--- a/interface/src/views/App/App.css
+++ b/interface/src/views/App/App.css
@@ -1,11 +1,21 @@
-.App {
+.App,
+.content {
 	min-height: 100vh;
 	min-width: 100vw;
 	background-color: #232323;
 }
 body {
+	min-height: 100vh;
 	background-color: #232323;
 	box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	text-align: center;
 }
 sl-select,
 sl-color-picker,
