--- a/interface/src/views/About/About.css
+++ b/interface/src/views/About/About.css
@@ -19,17 +19,20 @@
 }
 .about-container {
 	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
 	align-items: center;
+}
+.tab-panel::part(base) {
+	font-size: 2rem;
 }
 .tab-group {
 	--tabs-border-color: #151515;
-	font-size: 2rem;
+	font-size: 1.2rem;
 }
 .tab-group::part(base),
 .tab-group::part(active-tab-indicator) {
 	color: #ff5714 !important;
-	font-size: 1.5rem;
 }
 .tab-group::part(nav) {
 	background-color: #232323;
@@ -39,7 +42,9 @@
 .tab--active {
 	color: #ff5714;
 	border-bottom-color: #ff5714;
+	font-size: 2rem;
 }
+
 @keyframes expand {
 	0% {
 		transform: scale(0);
@@ -54,8 +59,43 @@
 .about-svg {
 	margin: 50px;
 }
+.logo-bar {
+	background-color: #ddd;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-bottom: 20px;
+}
 @media only screen and (max-width: 720px) {
 	.about-svg {
-		margin: 10px;
+		margin: 10px auto;
+	}
+	.tab::part(base) {
+		font-size: 1rem;
+	}
+	.tab-panel::part(base),
+	.tab-group {
+		font-size: 0.6rem;
+	}
+	.about-rightContainer {
+		width: 90%;
+		margin: 20px auto;
+	}
+}
+@media only screen and (max-width: 1020px) and (min-width: 721px) {
+	.about-svg {
+		margin: 10px auto;
+	}
+	.tab::part(base) {
+		font-size: 1rem;
+	}
+	.tab-panel::part(base),
+	.tab-group {
+		font-size: 0.8rem;
+	}
+	.about-rightContainer {
+		width: 80%;
+		margin: 20px auto;
 	}
 }
