--- a/interface/src/views/App/App.css
+++ b/interface/src/views/App/App.css
@@ -1,11 +1,11 @@
 .App,
 .content {
-	min-height: 100vh;
+	min-height: 110vh;
 	min-width: 100vw;
 	background-color: #232323;
 }
 body {
-	min-height: 100vh;
+	min-height: 110vh;
 	background-color: #232323;
 	box-sizing: border-box;
 }
@@ -16,6 +16,10 @@ h4,
 h5,
 h6 {
 	text-align: center;
+}
+::-webkit-scrollbar {
+	width: 0px;
+	background-color: transparent;
 }
 sl-select,
 sl-color-picker,
