--- a/interface/src/views/ForgotPassword/ForgotPassword.css
+++ b/interface/src/views/ForgotPassword/ForgotPassword.css
@@ -27,3 +27,9 @@
 .forgot-input::part(input) {
 	color: #ff5714 !important;
 }
+.waitEmail-spinner {
+	font-size: 5rem;
+	align-self: center;
+	justify-self: center;
+	--indicator-color: #ff5714;
+}
