--- a/interface/src/views/Signup/Signup.css
+++ b/interface/src/views/Signup/Signup.css
@@ -47,6 +47,9 @@
 	border: 2px solid #232323;
 	margin: 30px 0;
 }
+.or-div {
+	margin-left: 50px;
+}
 ::placeholder {
 	color: #ff5714;
 }
@@ -137,8 +140,15 @@
 	.signup-left-div,
 	.signup-right-div {
 		width: 80%;
+		margin: 30px;
 	}
-	.signup-container div {
-		margin: 30px 50px;
+	.inputs {
+		margin: 15px 0;
+	}
+	.or-div {
+		margin: 0 auto;
+	}
+	.signup-right-div h4 {
+		font-size: 18px;
 	}
 }
