--- a/interface/src/views/App/App.css
+++ b/interface/src/views/App/App.css
@@ -56,3 +56,12 @@ sl-dropdown,
 sl-icon-button {
 	visibility: visible !important;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+	-webkit-box-shadow: 0 0 0 30px #232323 inset !important;
+}
+input:-webkit-autofill {
+	-webkit-text-fill-color: #ff5714 !important;
+}
