--- a/interface/src/views/ForgotPassword/ForgotPassword.css
+++ b/interface/src/views/ForgotPassword/ForgotPassword.css
@@ -33,3 +33,11 @@
 	justify-self: center;
 	--indicator-color: #ff5714;
 }
+@media only screen and (max-width: 720px) {
+	.forgot-container {
+		width: 80%;
+	}
+	.waitEmail-spinner {
+		font-size: 3rem;
+	}
+}
