--- a/interface/src/views/RresetPassword/ResetPassword.css
+++ b/interface/src/views/RresetPassword/ResetPassword.css
@@ -15,3 +15,8 @@
 	justify-content: center;
 	align-items: center;
 }
+@media only screen and (max-width: 720px) {
+	.reset-container {
+		width: 80%;
+	}
+}
